<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_chats"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_chats"
        android:shortcutLongLabel="@string/shortcut_chats_desc">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mesh.dating"
            android:targetClass="com.mesh.dating.MainActivity"
            android:data="https://yoghearts.web.app/inbox" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_calls"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_calls"
        android:shortcutLongLabel="@string/shortcut_calls_desc">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mesh.dating"
            android:targetClass="com.mesh.dating.MainActivity"
            android:data="https://yoghearts.web.app/calls" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_requests"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_requests"
        android:shortcutLongLabel="@string/shortcut_requests_desc">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mesh.dating"
            android:targetClass="com.mesh.dating.MainActivity"
            android:data="https://yoghearts.web.app/requests" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_marketplace"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_marketplace"
        android:shortcutLongLabel="@string/shortcut_marketplace_desc">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mesh.dating"
            android:targetClass="com.mesh.dating.MainActivity"
            android:data="https://yoghearts.web.app/marketplace" />
    </shortcut>
</shortcuts>
